--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,9 @@
 
 :root {
   /* Globals */
+  --primary-color: #545149;
   --primary-background-color: #f4f1ec;
+  --font-logo: 'Bungee', sans-serif;
 
   /* Arrows (nav and back to top) */
   --arrow-button-color: red;
@@ -19,7 +21,7 @@ html {
 }
 
 body {
-  color: #545149;
+  color: var(--primary-color);
   background-color: var(--primary-background-color);
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
@@ -43,7 +45,7 @@ nav {
 }
 
 nav span {
-  font-family: 'Bungee', sans-serif;
+  font-family: var(--font-logo);
   font-size: xx-large;
   padding-top: 1.5em;
 }
@@ -75,4 +77,71 @@ header.userHeader {
   width: 100%;
   background-color: var(--primary-background-color);
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+}
+
+/* Container with new tweet and tweets inside */
+main.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+/* New Tweet Form Elements */
+.new-tweet form {
+  display: flex;
+  flex-direction: column;
+}
+
+.new-tweet form label {
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+
+#tweet-text {
+  width: 100%;
+  height: 45px;
+  background-color: inherit;
+  outline: none;
+  resize: none;
+  border-top: none;
+  border-right: none;
+  border-bottom: 5px solid var(--primary-color);
+  border-left: none;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+p#validation-error {
+  display: none;
+  color: #c33;
+  background-color: #fee;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+#form-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+#form-footer  button {
+  font-family: var(--font-logo);
+  color: #FFFFFF;
+  background-color: #4056A1;
+  border: none;
+}
+
+.counter {
+  font-family: var(--font-logo);
+  margin-right: 10px;
+}
+      
+.counter.negative {
+  color: red;
 }
