--- a/app/globals.css
+++ b/app/globals.css
@@ -145,3 +145,138 @@ p#validation-error {
 .counter.negative {
   color: red;
 }
+
+/* Display the list of Tweets */
+article.tweet {
+  border: 5px solid var(--primary-color);
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+}
+
+/* user avatar, name, handle */
+article.tweet header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding-bottom: 20px;
+}
+
+p.handle {
+  flex-grow: 1;
+  text-align: right;
+  font-size: 26px;
+  font-weight: bold;
+  color: #cdc3f7;
+} 
+
+/* text content of tweet */
+p.tweet-text {
+  font-size: 26px;
+  width: 97%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+  word-wrap: break-word;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+  font-size: 18px;
+  border-top: 5px solid var(--primary-color);
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-top: 15px;
+}
+
+/* time since tweet was posted */
+footer p {
+  flex-grow: 1;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+/* icons: flag, retweet, like */
+footer i {
+  color: rgb(63, 51, 155);
+}
+
+footer i:hover {
+  color: rgb(176, 139, 91);
+}
+
+article.tweet:hover {
+  box-shadow: 7px 7px rgb(194, 193, 230);
+}
+
+/* To top button */
+#bottom-button {
+  color: var(--arrow-button-color);
+  border: 15px solid transparent;
+  position: fixed;
+  bottom: 5px;
+  right: 0px;
+  z-index: 999;
+  transition: visibility 0.3s;
+  visibility: hidden;
+}
+
+#bottom-button.show {
+  visibility: visible;
+}
+
+#bottom-button:hover {
+  cursor: pointer;
+  color: var(--arrow-button-hover-color);
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 1025px) {
+  body {
+    width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  header.userHeader {
+    width: 30%;
+    background-image: none;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 0;
+  }
+
+  main.container {
+    width: 60%;
+    padding-top: 140px;
+  }
+}
+/* Print Styles, only print the tweets: hide the Nav bar and the header */
+@media print {
+  * {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: white;
+    font-size: x-small;
+  }
+
+  nav, header.userHeader, section.new-tweet, #bottom-button {
+    display: none;
+  }
+
+  article.tweet {
+    page-break-inside: avoid;
+    width: 100%;
+  }
+}
