--- a/app/globals.css
+++ b/app/globals.css
@@ -204,11 +204,11 @@ footer p {
 }
 
 /* icons: flag, retweet, like */
-footer i {
+footer .tweetIcon {
   color: rgb(63, 51, 155);
 }
 
-footer i:hover {
+footer .tweetIcon:hover {
   color: rgb(176, 139, 91);
 }
 
@@ -225,11 +225,6 @@ article.tweet:hover {
   right: 0px;
   z-index: 999;
   transition: visibility 0.3s;
-  visibility: hidden;
-}
-
-#bottom-button.show {
-  visibility: visible;
 }
 
 #bottom-button:hover {
